# crypto_ai_analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  workspace.yaml
.github/workflows/: release.yml  tests.yml
scripts/backfill/: candles.py  cot_positioning.py  etf_flows.py  funding_rates.py  futures_stats.py  helpers.py  macro.py  market_metrics.py  onchain_metrics.py  sentiment.py
src/: schemas.py
src/core/: helpers.py  http.py  logging.py  models.py  storage.py
src/core/helpers/: __init__.py  date.py  polars.py
src/core/iceberg/: __init__.py  record.py  store.py  table.py
src/core/quality/: __init__.py  checks.py  result.py  runner.py
src/core/storage/: __init__.py  _base.py  _row.py  _spec.py  iceberg.py
src/orchestration/: __init__.py  _asset.py  _runtime.py  checks.py  partitions.py  resources.py
src/orchestration/assets/raw/: __init__.py  candles.py  cot_positioning.py  etf_flows.py  exchange_flows.py  futures.py  macro.py  market_metrics.py  market_news.py  onchain_metrics.py  (+1 more)
src/orchestration/raw/: candles.py  cot_positioning.py  etf_flows.py  exchange_flows.py  futures.py  macro.py  market_metrics.py  market_news.py  onchain_metrics.py  sentiment.py
src/pipelines/: __init__.py  quality.py
tests/: conftest.py
tests/core/: test_helpers.py  test_http.py  test_logging.py  test_models.py
tests/core/quality/: test_checks.py  test_report.py
tests/core/storage/: test_iceberg.py  test_spec.py
tests/orchestration/: test_checks.py  test_job_tags.py
tests/pipelines/: test_quality.py
tests/scripts/backfill/: test_helpers.py
(+56 files in other folders)
