[project]
name = "crypto-ai-analysis"
version = "0.3.3"
description = "Daily BTC view and report pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pyiceberg[s3fs,pyiceberg-core]>=0.7",
    "httpx>=0.27",
    "python-binance>=1.0",
    "dagster>=1.9",
    "dagster-postgres",
    "dagster-webserver>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
